crates/red_knot_project/src/snapshots/red_knot_project__metadata__tests__nested_projects_in_root_project.snap
---
source: crates/red_knot_project/src/metadata.rs
expression: root
---
ProjectMetadata(
  name: Name("project-root"),
  root: "/app",
  options: Options(
    src: Some(SrcOptions(
      root: Some("src"),
    )),
  ),
)
