crates/red_knot_project/src/snapshots/red_knot_project__metadata__tests__nested_projects_without_knot_sections.snap
---
source: crates/red_knot_project/src/metadata.rs
expression: sub_project
---
ProjectMetadata(
  name: Name("nested-project"),
  root: "/app/packages/a",
  options: Options(),
)
