crates/red_knot_project/src/snapshots/red_knot_project__metadata__tests__project_with_knot_and_pyproject_toml.snap
---
source: crates/red_knot_project/src/metadata.rs
expression: root
---
ProjectMetadata(
  name: Name("super-app"),
  root: "/app",
  options: Options(
    environment: None,
    src: Some(SrcOptions(
      root: Some("src"),
    )),
  ),
)
