crates/red_knot_project/src/snapshots/red_knot_project__metadata__tests__project_with_pyproject.snap
---
source: crates/red_knot_project/src/metadata.rs
expression: project
---
ProjectMetadata(
  name: Name("backend"),
  root: "/app",
  options: Options(
    environment: None,
    src: None,
  ),
)
