crates/red_knot_project/src/snapshots/red_knot_project__metadata__tests__project_without_pyproject.snap
---
source: crates/red_knot_project/src/metadata.rs
expression: project
---
ProjectMetadata(
  name: Name("app"),
  root: "/app",
  options: Options(),
)
