crates/red_knot_project/src/snapshots/red_knot_project__metadata__tests__requires_python_major_minor_patch.snap
---
source: crates/red_knot_project/src/metadata.rs
expression: root
---
ProjectMetadata(
  name: Name("app"),
  root: "/app",
  options: Options(
    environment: Some(EnvironmentOptions(
      r#python-version: Some("3.12"),
    )),
  ),
)
